--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -12,4 +12,9 @@
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
+    <!-- properties -->
+    <properties>
+        <c2b.jdk.version>8</c2b.jdk.version>
+    </properties>
+
 </project>
