Add android dependency
Change-Id: I03deed5abf29f64ef1207be40858b44a8029821b
Signed-off-by: Dieter Scholz <disc@code2bytes.org>

--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -201,6 +201,13 @@
                 <version>2.0.2.Final</version>
                 <scope>provided</scope>
             </dependency>
+            <!-- Android dependencies -->
+            <dependency>
+                <groupId>android</groupId>
+                <artifactId>android</artifactId>
+                <version>4.4.2_r3</version>
+                <scope>provided</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
