--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -15,6 +15,8 @@
     <!-- properties -->
     <properties>
         <c2b.jdk.version>8</c2b.jdk.version>
+        <c2b.android.jdk.version>7</c2b.android.jdk.version>
+        <c2b.android.platform>19</c2b.android.platform>
     </properties>
 
     <!-- dependency management -->
