--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -210,6 +210,11 @@
                 <version>4.4.2_r3</version>
                 <scope>provided</scope>
             </dependency>
+            <dependency>
+                <groupId>android.support</groupId>
+                <artifactId>compatibility-v13</artifactId>
+                <version>19.1.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
