Add Java EE version property
Change-Id: I03ca1f25bcdcb37ab2cb7252031191474b830218
Signed-off-by: Dieter Scholz <disc@code2bytes.org>

--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -15,6 +15,7 @@
     <!-- properties -->
     <properties>
         <c2b.jdk.version>8</c2b.jdk.version>
+        <c2b.javaee.version>7</c2b.javaee.version>
         <c2b.android.jdk.version>7</c2b.android.jdk.version>
         <c2b.android.platform>19</c2b.android.platform>
     </properties>
